<resources>
    <string name="app_name">Home Work</string>
    <string name="press_me">Press Me</string>
    <string name="enter_the_text">Enter the text:</string>
    <string name="Sum">Сумма</string>
    <string name="Equal">Равно?</string>
    <string name="alarm">Alarm</string>
    <string name="yes">Да</string>
    <string name="no">нет</string>
    <string name="android">Вы хотите стать Android разработчиком?</string>
    <string name="enterDetails"> Please enter your details</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="age">Age:</string>
    <string name="number_phone">Number phone:</string>
    <string name="email">Email:</string>
    <string name="date">Date:</string>
    <string name="password">Password</string>
    <string name="result">Result</string>
</resources>