<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#FDEC55"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="Hello World!"
        android:textColor="#2196F3"
        android:textSize="40sp"

        tools:ignore="InefficientWeight" />


    <Switch
        android:id="@+id/name_Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showText="true"
        android:text="@string/alarm"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/name_view_Text1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#00FDEC55"
        android:fontFamily="casual"
        android:gravity="center"
        android:text=""
        android:textColor="#18CC1F"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/name_edit_Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/name_edit_Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp" />

    <Button
        android:id="@+id/name_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/Equal"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/name_view_Text2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#00FDEC55"
        android:fontFamily="casual"
        android:gravity="center"
        android:text=""
        android:textColor="#FF1100"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/name_view_Text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FDEC55"
        android:fontFamily="sans-serif-light"
        android:text="@string/android"
        android:textColor="#041DA6"
        android:textSize="20sp" />


    <CheckBox
        android:id="@+id/name_check_Box1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:text="@string/yes" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/no"
        android:textOn="@string/yes" />


</LinearLayout>